--- a/ethereum.html
+++ b/ethereum.html
@@ -12,7 +12,7 @@
 
 
 
-	<title>Ethereum - vinde si cumpara ETH- Crypto Exange</title>
+	<title>Ethereum - vinde si cumpara ETH- Coin Exchange</title>
 
 
 
@@ -20,19 +20,19 @@
 
 	<link href="https://fonts.googleapis.com/css?family=Montserrat:100,300,400,600" rel="stylesheet">
 
-		
+
 
 	<!-- Other CSS -->
 
 	<link rel="stylesheet" href="assets/css/bootstrap.min.css">
 
-	
+
 
 	<!-- Master CSS -->
 
 	<link rel="stylesheet" href="assets/css/master.css">
 
-	<link rel="icon" type="image/png" href="http://crypto-exchange.ro/favicon.png" />
+	<link rel="icon" type="image/png" href="https://i.imgur.com/ieCoJpW.png" />
 
 </head>
 
@@ -58,13 +58,13 @@
 
 				</button>
 
-				<a class="navbar-logo" href="http://crypto-exchange.ro/">
+				<a class="navbar-logo" href="/index.html">
 
-					<img src="assets/img/logo.png" alt="logo">
+					<img src="assets/img/logo-4.png" alt="logo">
 
 				</a>
 
-			</div>	
+			</div>
 
 
 
@@ -89,11 +89,11 @@
 
 					</ul>
 
-					
+
 
 				</div>
 
-				
+
 
 			</div>
 
@@ -113,7 +113,7 @@
 
 			<h1>Platforma software a viitorului</h1>
 
-			<a href="http://crypto-exchange.ro/cash.html" class="btn btn-outline">Incepe tranzactionarea acum!</a>
+			<a href="/contact.html" class="btn btn-outline">Incepe tranzactionarea acum!</a>
 
 		</div>
 
@@ -137,7 +137,7 @@ dis();
 setInterval(function() {
 dis();
 }, 25000);
-</script> 
+</script>
 
 			</div>
 
@@ -145,7 +145,7 @@ dis();
 
 	</div>
 
-	
+
 
 	<div class="platform-demo">
 
@@ -175,7 +175,7 @@ dis();
 
 						<div class="feature">
 
-							<img src="assets/icons/shield.png" alt="Garantie Dpozit">
+							<img src="assets/icons/shield2.png" alt="Garantie Dpozit">
 
 							<h2>Siguranta 100%</h2>
 
@@ -247,7 +247,7 @@ dis();
 
 				<h2>Ethereum <br> platforma software a  viitorului</h2>
 
-				<p align="justify"><strong>Ethereum</strong> este o retea sigura bazata pe tehnologia Blockchain (un registru public al tuturor tranzactiilor efectuate intr-o retea), care va permite sa construiti si sa lansati aplicatii descentralizate prin intermediul monedei digitale Ethereum.</p> 
+				<p align="justify"><strong>Ethereum</strong> este o retea sigura bazata pe tehnologia Blockchain (un registru public al tuturor tranzactiilor efectuate intr-o retea), care va permite sa construiti si sa lansati aplicatii descentralizate prin intermediul monedei digitale Ethereum.</p>
 
 				<p align="justify"><strong>Ethereum</strong> este utilizat, atat cu scopul comercializarii sub forma de schimb valutar ca si restul monedelor digitale tranzactionale, dar este incadrat perfect si in cadrul platformei Ethereum pentru a rula aplicatii rapid, printr-un singur click sau pentru a achitarea unor bunuri/servicii online. Tranzactia este realizata in doar cateva secunde, ceea ce face ca din punct de vedere comercial, Ethereum sa beneficieze de o crestere considerabila pe piata valutelor virtuale, datorata gradului de interes din ce in ce mai ridicat al investitorilor.</p>
 
@@ -263,7 +263,7 @@ dis();
 
 
 
-	<div class="platform-services">	
+	<div class="platform-services">
 
 		<div class="container-fluid">
 
@@ -311,7 +311,7 @@ dis();
 
 				<div class="col-xs-12">
 
-					<a href="#yourlink" class="footer-logo"><img src="assets/img/logo.png" alt=""></a>
+					<a href="/index.html" class="footer-logo"><img src="assets/img/logo-4.png" alt=""></a>
 
 					<div class="footer-menu">
 
@@ -333,7 +333,7 @@ dis();
 
 							</ul>
 
-							<button class="btn btn-solid"><img src="assets/icons/login-avatar.png" alt="">Login</button>
+
 
 						</div>
 
@@ -341,7 +341,7 @@ dis();
 
 					<div class="copyright">
 
-						<p>&copy; 2017 CRYPTO EXCHANGE </p>
+						<p>&copy; 2018 COIN EXCHANGE </p>
 
 					</div>
 
@@ -361,7 +361,7 @@ dis();
 
 	<script type="text/javascript" src="assets/js/master.js"></script>
 
-	
+
 
 </body>
 
