--- a/litecoin.html
+++ b/litecoin.html
@@ -11,7 +11,7 @@
 	<link rel="stylesheet" href="assets/css/bootstrap.min.css">
 	<!-- Master CSS -->
 	<link rel="stylesheet" href="assets/css/master.css">
-	<link rel="icon" type="image/png" href="http://crypto-exchange.ro/favicon.png" />
+	<link rel="icon" type="image/png" href="https://i.imgur.com/ieCoJpW.png" />
 </head>
 
 <body>
@@ -24,10 +24,10 @@
 					<span class="icon-bar"></span>
 				</button>
 
-				<a class="navbar-logo" href="http://crypto-exchange.ro/">
-					<img src="assets/img/logo.png" alt="logo">
+				<a class="navbar-logo" href="/index.html">
+					<img src="assets/img/logo-4.png" alt="logo">
 				</a>
-			</div>	
+			</div>
 
 			<div class="nav-menu clearfix">
 				<div class="menu">
@@ -52,7 +52,7 @@
 		<div class="container">
 			<img src="assets/img/litecoin.png" alt="">
 			<h1>Litecoin - Monedă digitală P2P Open Source</h1>
-			<a href="http://crypto-exchange.ro/cash.html" class="btn btn-outline">Incepe tranzactionarea acum!</a>
+			<a href="/contact.html" class="btn btn-outline">Incepe tranzactionarea acum!</a>
 		</div>
 	</header>
 
@@ -70,7 +70,7 @@ dis();
 setInterval(function() {
 dis();
 }, 25000);
-</script> 
+</script>
 
 			</div>
 
@@ -92,7 +92,7 @@ dis();
 							<h2>Plata Cash</h2>
 						</div>
 						<div class="feature">
-							<img src="assets/icons/shield.png" alt="Garantie Dpozit">
+							<img src="assets/icons/shield2.png" alt="Garantie Dpozit">
 							<h2>Siguranta 100%</h2>
 						</div>
 
@@ -137,7 +137,7 @@ dis();
 			<div class="text-center">
 
 				<h2>Litecoin <br>Monedă digitală P2P Open Source</h2>
-				
+
 				<p align="justify"><strong>Litecoin LTC</strong>, este o criptomonedă peer-to-peer alternativă (altcoin) opensource la Bitcoin. Litecoin a fost creat în octombrie 2011 de către Charles Lee, sub licență MIT. După Bitcoin, Ethereum și Ripple, Litecoin este a patra mare criptomonedă la capitalizarea de piață. Litecoin utilizează algoritmul scrypt.</p>
 				<p align="justify">Spre deosebire de Bitcoin, <strong>Litecoin</strong> oferă confirmări mai rapide ale tranzacțiilor (timpul de generare de 2,5 minute a unui bloc) și folosește un algoritm scrypt de tip proof-of-work ce necesită multă memorie de calcul.
 				Sistemul poate rula mai multe tranzacții datorită generării mai rapide a noilor blocuri, iar blockchain-ul Litecoin va fi mai mare.</p>
@@ -155,7 +155,7 @@ dis();
 
 
 
-	<div class="platform-services">	
+	<div class="platform-services">
 
 		<div class="container-fluid">
 
@@ -203,7 +203,7 @@ dis();
 
 				<div class="col-xs-12">
 
-					<a href="#yourlink" class="footer-logo"><img src="assets/img/logo.png" alt=""></a>
+					<a href="/index.html" class="footer-logo"><img src="assets/img/logo-4.png" alt=""></a>
 
 					<div class="footer-menu">
 
@@ -225,7 +225,7 @@ dis();
 
 							</ul>
 
-							<button class="btn btn-solid"><img src="assets/icons/login-avatar.png" alt="">Login</button>
+							
 
 						</div>
 
@@ -233,7 +233,7 @@ dis();
 
 					<div class="copyright">
 
-						<p>&copy; 2017 CRYPTO EXCHANGE </p>
+						<p>&copy; 2018 COIN EXCHANGE </p>
 
 					</div>
 
@@ -253,7 +253,7 @@ dis();
 
 	<script type="text/javascript" src="assets/js/master.js"></script>
 
-	
+
 
 </body>
 
